--- a/_quarto.yml
+++ b/_quarto.yml
@@ -50,6 +50,36 @@ book:
         - problem191dynamicsubmit.qmd
         - problem192dynamicsubmit.qmd
         - problem193dynamicsubmit.qmd
+        - problem194dynamicsubmit.qmd
+        - problem204dynamicsubmit.qmd
+        - problem205dynamicsubmit.qmd
+        - problem206dynamicsubmit.qmd
+        - problem208dynamicsubmit.qmd
+        - problem213dynamicsubmit.qmd
+        - problem216dynamicsubmit.qmd
+        - problem222dynamicsubmit.qmd
+        - problem223dynamicsubmit.qmd
+        - problem224dynamicsubmit.qmd
+        - problem225dynamicsubmit.qmd
+        - problem226dynamicsubmit.qmd
+        - problem246dynamicsubmit.qmd
+        - problem247dynamicsubmit.qmd
+        - problem248dynamicsubmit.qmd
+        - problem249dynamicsubmit.qmd
+        - problem250dynamicsubmit.qmd
+        - problem265dynamicsubmit.qmd
+        - problem266dynamicsubmit.qmd
+        - problem267dynamicsubmit.qmd
+        - problem268dynamicsubmit.qmd
+        - problem269dynamicsubmit.qmd
+        - problem270dynamicsubmit.qmd
+        - problem273dynamicsubmit.qmd
+        - problem274dynamicsubmit.qmd
+        - problem276dynamicsubmit.qmd
+        - problem278dynamicsubmit.qmd
+        - problem287dynamicsubmit.qmd
+        - problem288dynamicsubmit.qmd
+        - problem289dynamicsubmit.qmd
     - summary.qmd
     - references.qmd
 
