rewording and static versions

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,63 +23,95 @@ book:
     - index.qmd
     - part: "List of Complete Problems"
       chapters:
-        - problem138dynamicsubmit.qmd
-        - problem139dynamicsubmit.qmd
-        - problem144dynamicsubmit.qmd
-        - problem146dynamicsubmit.qmd
-        - problem153dynamicsubmit.qmd
-        - problem156dynamicsubmit.qmd
-        - problem157dynamicsubmit.qmd
-        - problem164dynamicsubmit.qmd
-        - problem165dynamicsubmit.qmd
-        - problem166dynamicsubmit.qmd
+        - problem2_1dynamicsubmit.qmd
+        - problem2_2dynamicsubmit.qmd
+        - problem2_3dynamicsubmit.qmd
+        - problem2_4dynamicsubmit.qmd
+        - problem2_47dynamicsubmit.qmd
+        - problem2_48dynamicsubmit.qmd
+        - problem4_35dynamicsubmit.qmd
+        - problem2_21dynamicsubmit.qmd
+        - problem2_22dynamicsubmit.qmd
+        - problem2_38dynamicsubmit.qmd
+    - part: "List of Complete Problems - Static Version"
+        - problem2_1staticsubmit.qmd
+        - problem2_2staticsubmit.qmd
+        - problem2_3staticsubmit.qmd
+        - problem2_4staticsubmit.qmd
+        - problem2_47staticsubmit.qmd
+        - problem2_48staticsubmit.qmd
+        - problem4_35staticsubmit.qmd
+        - problem2_21staticsubmit.qmd
+        - problem2_22staticsubmit.qmd
+        - problem2_38staticsubmit.qmd
     - part: "Interactive Interface Demo"
       chapters:
         - interfacedemo.qmd   
     - part: "List of Working Problems"
-      chapters:
-        - problem168dynamicsubmit.qmd
-        - problem169dynamicsubmit.qmd
-        - problem180dynamicsubmit.qmd
-        - problem183dynamicsubmit.qmd
-        - problem184dynamicsubmit.qmd
-        - problem185dynamicsubmit.qmd
-        - problem186dynamicsubmit.qmd
-        - problem187dynamicsubmit.qmd
-        - problem188dynamicsubmit.qmd
-        - problem191dynamicsubmit.qmd
-        - problem192dynamicsubmit.qmd
-        - problem193dynamicsubmit.qmd
-        - problem194dynamicsubmit.qmd
-        - problem204dynamicsubmit.qmd
-        - problem205dynamicsubmit.qmd
-        - problem206dynamicsubmit.qmd
-        - problem208dynamicsubmit.qmd
-        - problem213dynamicsubmit.qmd
-        - problem216dynamicsubmit.qmd
-        - problem222dynamicsubmit.qmd
-        - problem223dynamicsubmit.qmd
-        - problem224dynamicsubmit.qmd
-        - problem225dynamicsubmit.qmd
-        - problem226dynamicsubmit.qmd
-        - problem246dynamicsubmit.qmd
-        - problem247dynamicsubmit.qmd
-        - problem248dynamicsubmit.qmd
-        - problem249dynamicsubmit.qmd
-        - problem250dynamicsubmit.qmd
-        - problem265dynamicsubmit.qmd
-        - problem266dynamicsubmit.qmd
-        - problem267dynamicsubmit.qmd
-        - problem268dynamicsubmit.qmd
-        - problem269dynamicsubmit.qmd
-        - problem270dynamicsubmit.qmd
-        - problem273dynamicsubmit.qmd
-        - problem274dynamicsubmit.qmd
-        - problem276dynamicsubmit.qmd
-        - problem278dynamicsubmit.qmd
-        - problem287dynamicsubmit.qmd
-        - problem288dynamicsubmit.qmd
-        - problem289dynamicsubmit.qmd
+      chapter 1:
+      chapter 2:
+        - problem2_1dynamicsubmit.qmd
+        - problem2_2dynamicsubmit.qmd
+        - problem2_3dynamicsubmit.qmd
+        - problem2_4dynamicsubmit.qmd
+        - problem2_21dynamicsubmit.qmd
+        - problem2_22dynamicsubmit.qmd
+        - problem2_23dynamicsubmit.qmd
+        - problem2_37dynamicsubmit.qmd
+        - problem2_39dynamicsubmit.qmd
+        - problem2_40dynamicsubmit.qmd
+        - problem2_47dynamicsubmit.qmd
+        - problem2_48dynamicsubmit.qmd
+      chapter 3:
+      chapter 4:
+        - problem4_5dynamicsubmit.qmd
+        - problem4_6dynamicsubmit.qmd
+        - problem4_10dynamicsubmit.qmd
+        - problem4_11dynamicsubmit.qmd
+        - problem4_12dynamicsubmit.qmd
+        - problem4_23dynamicsubmit.qmd
+        - problem4_24dynamicsubmit.qmd
+        - problem4_25dynamicsubmit.qmd
+        - problem4_37dynamicsubmit.qmd
+      chapter 5:
+        - problem5_11dynamicsubmit.qmd
+        - problem5_12dynamicsubmit.qmd
+        - problem5_13dynamicsubmit.qmd
+        - problem5_14dynamicsubmit.qmd
+        - problem5_15dynamicsubmit.qmd
+        - problem5_27dynamicsubmit.qmd
+        - problem5_34dynamicsubmit.qmd
+        - problem5_35dynamicsubmit.qmd
+        - problem5_36dynamicsubmit.qmd
+        - problem5_37dynamicsubmit.qmd
+        - problem5_38dynamicsubmit.qmd
+        - problem5_39dynamicsubmit.qmd
+        - problem5_50dynamicsubmit.qmd
+        - problem5_51dynamicsubmit.qmd
+        - problem5_52dynamicsubmit.qmd
+        - problem5_53dynamicsubmit.qmd
+        - problem5_54dynamicsubmit.qmd
+        - problem5_55dynamicsubmit.qmd
+      chapter 6:
+        - problem6_1dynamicsubmit.qmd
+        - problem6_2dynamicsubmit.qmd
+        - problem6_3dynamicsubmit.qmd
+        - problem6_4dynamicsubmit.qmd
+        - problem6_5dynamicsubmit.qmd
+        - problem6_11dynamicsubmit.qmd
+        - problem6_12dynamicsubmit.qmd
+        - problem6_13dynamicsubmit.qmd
+        - problem6_14dynamicsubmit.qmd
+        - problem6_15dynamicsubmit.qmd
+        - problem6_27dynamicsubmit.qmd
+        - problem6_28dynamicsubmit.qmd
+        - problem6_30dynamicsubmit.qmd
+        - problem6_31dynamicsubmit.qmd
+      chapter 7:
+        - problem7_1dynamicsubmit.qmd
+        - problem7_2dynamicsubmit.qmd
+        - problem7_3dynamicsubmit.qmd
+      
     - summary.qmd
     - references.qmd
 
